gcc/testsuite/g++.dg/cpp0x/pr32253.C
// { dg-options "-std=c++11" }
template<void (*... fp)()> struct A
{
  A() { fp(); } // { dg-error "not expanded|fp" }
};

void foo();

A<foo> a;
